# sgxlib

./: Cargo.toml  README.md
builder/: Cargo.toml  README.md
builder/src/: enclave.rs  geode.rs  intel.rs  lib.rs  teaclave.rs
enclave/: Cargo.toml
enclave/src/: lib.rs
src/: lib.rs
