[package]
name = "ata-sgx-builder"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
cargo_toml = "0.11.4"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
home = "=0.5.5"
cc = "1.0.66"
openssl = { version = "=0.10.40" }
openssl-sys = { version = "=0.9.73" }
bn = { package = "substrate-bn", version = "0.6", default-features = false }
rand = { package = "rand", version = "0.7", default-features = false }